[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/bcpics/cardback.png" type="Texture" id=1]
[ext_resource path="res://scenes/Card.gd" type="Script" id=2]
[ext_resource path="res://CardImages/Card_01.png" type="Texture" id=3]

[node name="Card" type="MarginContainer"]
anchor_left = -0.109
anchor_top = -0.27
anchor_right = 0.109
anchor_bottom = 0.272
margin_left = 139.52
margin_top = 194.4
margin_right = -139.52
margin_bottom = -195.84
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CardBack" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Focus" type="TextureButton" parent="."]
expand = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 148.5, -201, 148.5, -197, 145.5, 16, 146.5, 16, 149.5, 202, 146.7, 202, 122.6, 205, -85.5, 205, -85.5, 203.9, -145.5, 199.9, -145.5, 191, -144.5, -98, -145.4, -98, -149.6, -200, -146.6, -200, -74.5, -203.9, -74.5, -205 )

[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
